--- a/evoks/theme/templates/base.html
+++ b/evoks/theme/templates/base.html
@@ -1,20 +1,142 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    <title>Django Tailwind</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		{% tailwind_css %}
-	</head>
 
-	<body class="bg-regal-blue font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-6xl">FREUNDE DER ONKOLOGIE ❤️</h1>
-				<h2 class="text-6xl">WILLKOMMEN ZU PainSE</h2>
-			</section>
+<head>
+	<title>Vocabulary Dashboard</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	{% tailwind_css %}
+
+</head>
+
+<body>
+
+	<!-- Create Team Modal -->
+    {% include "modals/create_team.html" %}
+    <!-- Create Vocabulary Modal -->
+    {% include "modals/create_vocabulary.html" %}
+
+
+    <div class="h-screen bg-white overflow-visible flex">
+
+        <!-- Static sidebar for mobile -->
+        {% include "sidebars/mobile.html" %}
+        <!-- Static sidebar for desktop -->
+        {% include "sidebars/desktop.html" %}
+
+        <div class="flex-1 max-w-4xl mx-auto w-0 flex flex-col md:px-8 xl:px-0">
+            {% include "header/searchbar.html" %}
+
+			<main class="flex-1 relative overflow-y-auto focus:outline-none">
+				<div class="py-6">
+					<div class="px-4 sm:px-6 md:px-0">
+						<h1 class="text-2xl font-semibold text-gray-900">Vocabulary Dashboard</h1>
+					</div>
+					<div class="px-4 sm:px-6 md:px-0">
+						<!-- Replace with your content -->
+						<div class="py-4">
+
+							<!-- This example requires Tailwind CSS v2.0+ -->
+							<div class="flex flex-col">
+								<div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+									<div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+										<div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+											<table class="min-w-full divide-y divide-gray-200">
+												<thead class="bg-gray-50">
+													<tr>
+														<th scope="col"
+															class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+															Name
+														</th>
+														<th scope="col"
+															class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider hidden md:table-cell">
+															Team
+														</th>
+														<th scope="col"
+															class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider hidden md:table-cell">
+															Status
+														</th>
+														<th scope="col"
+															class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+															Role
+														</th>
+
+													</tr>
+												</thead>
+												<tbody class="bg-white divide-y divide-gray-200">
+													<tr>
+														<td class="px-6 py-4 whitespace-nowrap">
+															<div class="flex items-center">
+																<div class="ml-4">
+																	<div class="text-sm text-gray-900">
+																		<a href="/vocabularies/123">
+																			Cooles Vokabular
+																		</a>
+																	</div>
+																</div>
+															</div>
+														</td>
+														<td class="px-6 py-4 whitespace-nowrap hidden md:table-cell">
+															<div class="text-sm text-gray-900">Vokabular Fans KIT
+															</div>
+															<div class="text-sm text-gray-500">Vokabeln sind cool!
+															</div>
+														</td>
+														<td class="px-6 py-4 whitespace-nowrap hidden md:table-cell">
+															<span
+																class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800 hidden md:table-cell">
+																Live
+															</span>
+														</td>
+														<td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+															Spectator
+														</td>
+													</tr>
+													<!-- More people... -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- This example requires Tailwind CSS v2.0+ -->
+							<nav class="bg-white px-4 py-3 flex items-center justify-between sm:px-6 mt-5"
+								aria-label="Pagination">
+								<div class="hidden sm:block">
+									<p class="text-sm text-gray-700">
+										Showing
+										<span class="font-medium">1</span>
+										to
+										<span class="font-medium">10</span>
+										of
+										<span class="font-medium">20</span>
+										results
+									</p>
+								</div>
+								<div class="flex-1 flex justify-between sm:justify-end">
+									<a href="#"
+										class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+										Previous
+									</a>
+									<a href="#"
+										class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+										Next
+									</a>
+								</div>
+							</nav>
+
+
+						</div>
+						<!-- /End replace -->
+					</div>
+				</div>
+			</main>
 		</div>
-	</body>
+	</div>
+
+</body>
+<script src="{% static 'js/main.js' %}"></script>
+
 </html>
